--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2? família=Permanente+Marcador&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -8,8 +8,30 @@
 section{
     width: 100vw;
     height: 100vh;
-    background-image: url('../img/img_bg.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
+    background-color: #eec24a;
+}
+header{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    font-family: 'Poppins', sans-serif;
+}
+header .logo{
+    width: 100%;
+    height: 120px;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    padding-left: 2rem;
+}
+header > .logo > a > img {
+    width: 110px;
+}
+.logo h1{
+    color: #eb5736;
+    font-size: 3rem;
+}
+.logo span{
+    color: #524845;
 }
